--- a/addressbook-web-tests/build.gradle
+++ b/addressbook-web-tests/build.gradle
@@ -1,6 +1,5 @@
 apply plugin: 'java'
-apply plugin: 'application'
-mainClassName = "MyFirstProgram"
+
 
 repositories {
     mavenCentral()
@@ -8,4 +7,5 @@ repositories {
 
 dependencies{
     compile("org.testng:testng:7.0.0-beta3")
-}
+    compile("org.seleniumhq.selenium:selenium-java:3.141.59")
+  }
